changes to body media queriy

--- a/my_app/src/App.css
+++ b/my_app/src/App.css
@@ -294,7 +294,7 @@ h4 {
         text-align: center;
     }.body {
         height: 100vh;
-        justify-content: center;
+        padding-bottom: 32rem;
 
     }
     .heading_Contents {
