--- a/my_app/src/components/styles/nav.css
+++ b/my_app/src/components/styles/nav.css
@@ -18,6 +18,7 @@
     min-height: 10vh;
     box-shadow: 0px 8px 4px rgba(173, 167, 167, 0.25);
     justify-content: space-between;
+    max-width: 100%;
 }
 #lightModeClick { 
     transform: translateY(6px);
