--- a/my_app/src/App.css
+++ b/my_app/src/App.css
@@ -165,6 +165,11 @@ h4 {
     color: #434343;
 }
 
+/* .main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
 
 
 
@@ -300,6 +305,11 @@ h4 {
 
 
 @media screen and (max-width: 524px) { 
+
+    .development {
+        width: 100%;
+    }
+
     .skills_Image { 
         display: inline;
     }
