--- a/my_app/src/components/styles/project.css
+++ b/my_app/src/components/styles/project.css
@@ -204,6 +204,7 @@ input[type = submit] {
     font-size: 18px;
     cursor: pointer;
     transition:  background-color ease 0.5s;
+    width: 100%;
 }
 input[type = submit]:hover { 
     background-color: #393939;
