--- a/my_app/src/components/styles/project.css
+++ b/my_app/src/components/styles/project.css
@@ -169,12 +169,22 @@ transition: all ease-in-out 0.5s;
 
 .contactSection { 
     height: 100vh;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+label { 
+    font-size: 18px;
+    padding: 20px 0;
 }
 .contactDiv { 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .formDiv {
@@ -194,9 +204,9 @@ transition: all ease-in-out 0.5s;
 input[type = email]:focus { 
     outline: 2px solid var(--MainColor);
 }
-input[type = submit] { 
+.text{ 
     margin-top: 25px;
-    width: 444px;
+    width: 100%;
     height: 69px;
     background-color: var(--MainColor);
     color: #fff;
@@ -204,9 +214,42 @@ input[type = submit] {
     font-size: 18px;
     cursor: pointer;
     transition:  background-color ease 0.5s;
-    width: 100%;
+    border-radius: 5px;
+    outline: 0;
+    border: 1px solid transparent;
+
 }
-input[type = submit]:hover { 
+.blueText { 
+    margin-top: 25px;
+    height: 69px;
+    background-color: rgb(87, 165, 200);
+    color: #fff;
+    font-family: var(--MainFont);
+    font-size: 18px;
+    transition:  background-color ease 0.5s;
+    border-radius: 5px;
+    outline: 0;
+    border: 1px solid transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.redText { 
+    margin-top: 25px;
+    width: 100%;
+    height: 69px;
+    background-color: rgb(173, 11, 11);
+    color: #fff;
+    font-family: var(--MainFont);
+    font-size: 18px;
+    cursor: pointer;
+    transition:  background-color ease 0.5s;
+    border-radius: 5px;
+    outline: 0;
+    border: 1px solid transparent;
+ 
+}
+.text:hover { 
     background-color: #393939;
 
 }
