--- a/my_app/src/components/styles/Article.css
+++ b/my_app/src/components/styles/Article.css
@@ -64,7 +64,7 @@
     max-width: 100%;
 }
 .img_Heading img { 
-    width: fit-content;
+    width: 100%;
     height: 100%;
     object-fit: contain;
 }
