--- a/my_app/src/components/styles/Article.css
+++ b/my_app/src/components/styles/Article.css
@@ -13,6 +13,7 @@
     margin-top: 5rem;
     align-items: center;
     flex-direction: column;
+    gap: 15px;
 }
 .wrapper header { 
     font-size:96px ;
@@ -123,7 +124,7 @@ header  {
 
 @media  screen and (max-width: 524px) {
 .wrapper header { 
-    font-size: 54px !important;
+    font-size: 34px !important;
     width: 100%;
 
 }
